added reset css

--- a/index.html
+++ b/index.html
@@ -18,5 +18,73 @@
 </head>
 <body>
     
+    <!-- =====================================
+    	==== Start Loading -->
+
+    <!-- End Loading =====================================-->
+
+
+    
+
+    <!-- =====================================
+    	==== Start Loading -->
+
+    <!-- End Loading =====================================-->
+
+
+
+
+
+
+    <!-- =====================================
+    	==== Start Loading -->
+
+    <!-- End Loading =====================================-->
+
+
+
+
+    <!-- =====================================
+    	==== Start Loading -->
+
+    <!-- End Loading =====================================-->
+
+
+
+
+
+    <!-- =====================================
+    	==== Start Loading -->
+
+    <!-- End Loading =====================================-->
+
+
+        <!-- =====================================
+    	==== Start Loading -->
+
+    <!-- End Loading =====================================-->
+
+        <!-- =====================================
+    	==== Start Loading -->
+
+    <!-- End Loading =====================================-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
