--- a/index.html
+++ b/index.html
@@ -19,20 +19,30 @@
 <body>
     <!-- =====================================
     	==== Start Header Area -->
-    <nav class="container flex align-items justify-sb">
+    <nav class="container flex align-items justify-sb flex-wrap">
         <!-- Website Logo -->
-        <div class="logo-section">
+        <div class="logo-section flex align-items">
             <img class="logo" src="./images/logo.png" alt="Site Logo">
-        </div>
 
-        <!-- Search Block -->
-        <div class="search-block">
-            <input type="text" placeholder="Search for rooms or homes...">
-            <img src="./images/search-icon.png" alt="Search Icon">
+            <!-- Search Block -->
+            <div class="search-block flex align-items">
+                <input type="text" placeholder="Search for rooms or homes...">
+                <img src="./images/search-icon.png" alt="Search Icon">
+            </div>
         </div>
 
         <!-- Hamburger Icon -->
-        <img src="./images/hamburger.png" alt="Hamburger Mobile Icon">
+        <img class="hamburger" src="./images/hamburger.png" alt="Hamburger Mobile Icon">
+        
+        <ul class="nav-list">
+            <li><a href="#">Become a Host</a></li>
+            <li><a href="#">Trips</a></li>
+            <li><a href="#">Messages</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">
+                <img src="./images/avatar.png" alt="Profile Icon">
+            </a></li>
+        </ul>
     </nav>
     <!-- /End Header Area =====================================-->
 
