complete mobile hero section

--- a/index.html
+++ b/index.html
@@ -49,22 +49,30 @@
     
 
 
-
-
-
-
-
-
-
-
-
-
-    
-
     <!-- =====================================
-    	==== Start Loading -->
+    	==== Start Main Area -->
+        <main>
+            <div class="hero flex align-items">
+                <div class="hero-text-block">
+                    <div class="house-emoji">🏠</div>
+                    <h1>Book unique homes and experiences all over the world.</h1>
 
-    <!-- End Loading =====================================-->
+                    <!-- Hero Search Block -->
+                    <div class="search-block hero-search-block flex align-items">
+                        <input type="text" placeholder="Try ''Copenhaeen, Denmark'' ">
+                        <img src="./images/search-icon-white.png" alt="Search Icon">
+                    </div>
+                    <!-- Hero Btn Block -->
+                    <div class="hero-btn-block flex flex-wrap">
+                        <button class="btn btn-primary">All Properties</button>
+                        <button class="btn btn-secondary">Homes</button>
+                        <button class="btn btn-secondary">Experiences</button>
+                        <button class="btn btn-secondary">Restaurants</button>
+                    </div>
+                </div>
+            </div>
+        </main>
+    <!-- /End Main Area =====================================-->
 
 
 
